# jsnap

./: Cargo.toml  README.md  policy.schema.json
src/: brand.rs  main.rs
src/core/: capture.rs
src/export/: clipboard.rs  flatten.rs
src/ui/: hotkey.rs
