[package]
name = "jsnap"
version = "0.1.0"
edition = "2021"
authors = ["Ulli <you@example.com>"]
description = "Jsnap — Just snap it."
license = "Elastic-2.0"
build = "build.rs"

[dependencies]
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "webp"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"
uuid = { version = "1", features = ["v4"] }
zstd = "0.13"

winapi = { version = "0.3", features = ["winuser", "wingdi", "shellscalingapi"] }
widestring = "1.0"

tiny-skia = "0.11"
usvg = "0.40"

dpapi = "0.3"
aes-gcm = "0.10"
argon2 = "0.5"
rand_core = "0.6"

minifb = "0.26"
tray-icon = "0.10"

log = "0.4"
env_logger = "0.11"
